--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
             <a style="margin-left: 30px; margin-top: ;" href="#"><img src="/image/library_site.PNG"></a>
             <br>
             <ul style="list-style: none; float: left; width: 300px; padding: 0; margin-top: 30px;">
-                <li style="list-style: none; float: left;"><a href="#" ><img src="/image/library_borrow.PNG"></a></li>
+                <li style="list-style: none; float: left;"><a href="#" ><img src="image/library_borrow.PNG"></a></li>
                 <li style="list-style: none; float: left;"><a href="#" ><img src="/image/library_forgot.PNG"></a></li>
             </ul>
         </three>
