--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
             <br>
             <ul style="list-style: none; float: left; width: 300px; padding: 0; margin-top: 30px;">
                 <li style="list-style: none; float: left;"><a href="#" ><img src="image/library_borrow.PNG"></a></li>
-                <li style="list-style: none; float: left;"><a href="#" ><img src="/image/library_forgot.PNG"></a></li>
+                <li style="list-style: none; float: left;"><a href="#" ><img src="../image/library_forgot.PNG"></a></li>
             </ul>
         </three>
     </nav>
