--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
             <br>
             <br>
             <ul style="list-style: none; float: left; width: 300px; padding: 0;">
-                <li style="list-style: none; float: left;"><a href="#" ><img src="/image/webMail_take.PNG"></a></li>
+                <li style="list-style: none; float: left;"><a href="#" ><img src="./image/webMail_take.PNG"></a></li>
                 <li style="list-style: none; float: left;"><a href="#" ><img src="/image/webMail_yet.PNG"></a></li>
             </ul>
         </two>
