--- a/home.html
+++ b/home.html
@@ -18,11 +18,11 @@
     </nav>
     <nav id="secondMenu">
         <ul>
-            <li><a class="menuLink2" href="#"><img src="/image/Incheon_Logo.png"></a></li>
+            <li><a class="menuLink2" href="#"><img src="./image/Incheon_Logo.png"></a></li>
             <li><a class="menuLink1" href="#">통합정보</a></li>
             <li><a class="menuLink1" href="#">이러닝</a></li>
             <li><a class="menuLink1" href="#">게시판</a></li>
-            <li><img class="menuLink3" src="/image/search_top.png"></li>
+            <li><img class="menuLink3" src="./image/search_top.png"></li>
         </ul>
     </nav>
     <nav id="content_menu">
@@ -41,17 +41,17 @@
             <br>
             <ul style="list-style: none; float: left; width: 300px; padding: 0;">
                 <li style="list-style: none; float: left;"><a href="#" ><img src="./image/webMail_take.PNG"></a></li>
-                <li style="list-style: none; float: left;"><a href="#" ><img src="/image/webMail_yet.PNG"></a></li>
+                <li style="list-style: none; float: left;"><a href="#" ><img src="./image/webMail_yet.PNG"></a></li>
             </ul>
         </two>
         <three>
             <br>
             <text4 style="font-weight: bold; font-size: 19px; margin-left: 30px;">도서관서비스</text4>
-            <a style="margin-left: 30px; margin-top: ;" href="#"><img src="/image/library_site.PNG"></a>
+            <a style="margin-left: 30px; margin-top: ;" href="#"><img src="./image/library_site.PNG"></a>
             <br>
             <ul style="list-style: none; float: left; width: 300px; padding: 0; margin-top: 30px;">
-                <li style="list-style: none; float: left;"><a href="#" ><img src="image/library_borrow.PNG"></a></li>
-                <li style="list-style: none; float: left;"><a href="#" ><img src="../image/library_forgot.PNG"></a></li>
+                <li style="list-style: none; float: left;"><a href="#" ><img src="./image/library_borrow.PNG"></a></li>
+                <li style="list-style: none; float: left;"><a href="#" ><img src="./image/library_forgot.PNG"></a></li>
             </ul>
         </three>
     </nav>
