three 태그에서 margin-top 속성 제거

--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
         <three>
             <br>
             <text4 style="font-weight: bold; font-size: 19px; margin-left: 30px;">도서관서비스</text4>
-            <a style="margin-left: 30px; margin-top:" href="#"><img src="image/library_site.PNG"></a>
+            <a style="margin-left: 30px;" href="#" ><img src="image/library_site.PNG"></a>
             <br>
             <ul style="list-style: none; float: left; width: 300px; padding: 0; margin-top: 30px;">
                 <li style="list-style: none; float: left;"><a href="#" ><img src="./image/library_borrow.PNG"></a></li>
